@@ -32,8 +32,9 @@ checkstyle.version=4.2
 ivy.version=2.2.0
 jasper.version=6.1.14
 guava.version=11.0
-hadoop-core.version=0.20.2
-hadoop-test.version=0.20.2
+jersey-core.version=1.8
+hadoop-core.version=1.0.0
+hadoop-test.version=1.0.0
 hadoop-common.version=0.23.1-SNAPSHOT
 hadoop-hdfs.version=0.23.1-SNAPSHOT
 hadoop-mapreduce.version=0.23.1-SNAPSHOT
