@@ -1155,4 +1155,18 @@ public class Util {
             return false;
         return true;
     }
+    
+    public static boolean isHadoop205() {
+        String version = org.apache.hadoop.util.VersionInfo.getVersion();
+        if (version.matches("\\b0\\.20\\.205\\..+"))
+            return true;
+        return false;
+    }
+    
+    public static boolean isHadoop1_0() {
+        String version = org.apache.hadoop.util.VersionInfo.getVersion();
+        if (version.matches("\\b1\\.0\\..+"))
+            return true;
+        return false;
+    }
 }
