@@ -369,6 +369,8 @@ Release 0.9.2 - Unreleased
 
 IMPROVEMENTS
 
+PIG-2431: Upgrade bundled hadoop version to 1.0.0 (daijy)
+
 PIG-2447: piggybank: get hive dependency from maven (thw via azaroth)
 
 PIG-2347: Fix Pig Unit tests for hadoop 23 (daijy)
